--- a/superlistapi/templates/index.html
+++ b/superlistapi/templates/index.html
@@ -22,9 +22,11 @@
     {% verbatim %}
     <div class="row">
       <div class="col-md-4">
+      <form ng-submit="addTodo()">
         <input type='text' ng-model="todo.name">
-        <button class="btn btn-primary btn-md"  ng-click="addTodo()">Add</button>
+        <input type="submit" class="btn btn-primary btn-md" value="Add">
         <i ng-show="loading" class="fa fa-spinner fa-spin"></i>
+      </form>
       </div>
     </div>
     <hr>
