--- a/superlistapi/templates/index.html
+++ b/superlistapi/templates/index.html
@@ -3,45 +3,82 @@
 <html ng-app="myApp">
   <head>
     <meta charset="utf-8" />
+    <meta author="Jose Maria Micoli">
     <title>AngularJS consuming Django</title>
     <script>document.write('<base href="' + document.location + '" />');</script>
     <link rel="stylesheet" type="text/css" href="{% static 'stylesheet/style.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.css' %}">
+  </head>
+
+  <body ng-controller="TodosCtrl">
+    {% verbatim %}
+    <div class="header">
+      <div class="navbar navbar-default" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="#/">Superlist</a>
+          </div>
+
+          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+
+            <ul class="nav navbar-nav">
+              <li ng-class="{active:isActive('/')}"><a href="#/">Home</a></li>
+              <li ng-class="{active:isActive('/about')}"><a ng-href="#/about">About</a></li>
+              <li ng-class="{active:isActive('/contact')}"><a ng-href="#/">Contact</a></li>
+              <li ng-class="{active:isActive('/todos')}"><a ng-href="#/todos">Todos</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container" ng-view>
+      <div class="jumbotron">
+        <h1>Superlist</h1>
+      </div>
+
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <form ng-submit="addTodo()">
+            <input type='text' ng-model="todo.name" placeholder="What's need to be done?">
+            <input type="submit" class="btn btn-primary btn-md" value="Add">
+            <i ng-show="loading" class="fa fa-spinner fa-spin"></i>
+          </form>
+        </div>
+        <div class="panel-body">
+          <table class="table table-striped">
+            <tr ng-repeat='todo in todos'>
+              <td><input type="checkbox" ng-true-value="1" ng-false-value="'0'" ng-model="todo.iscompleted" ng-change="updateTodo(todo)"></td>
+              <td>{{todo.name}}</td>
+              <td><button class="btn btn-danger btn-xs" ng-click="deleteTodo($index)">  <span class="glyphicon glyphicon-trash" ></span></button></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      {% endverbatim %}
+    </div>
+
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+     <script>
+       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
+       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
+       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
+       }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+       ga('create', 'UA-XXXXX-X');
+       ga('send', 'pageview');
+    </script>
     <script type="text/javascript" src="{% static 'bower_components/angular/angular.js' %}"></script>
     <script type="text/javascript" src="{% static 'bower_components/angular-ui-router/release/angular-ui-router.js' %}"></script>
     <script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/app.js' %}"></script>
-  </head>
-
-  <body ng-controller="TodosCtrl">
-    <div class="container" ng-view>
-      <navbar></navbar>
-      <div class="jumbotron">
-        <h1>My Angular Django</h1>
-      </div>
-    {% verbatim %}
-    <div class="row">
-      <div class="col-md-4">
-      <form ng-submit="addTodo()">
-        <input type='text' ng-model="todo.name">
-        <input type="submit" class="btn btn-primary btn-md" value="Add">
-        <i ng-show="loading" class="fa fa-spinner fa-spin"></i>
-      </form>
-      </div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-md-4">
-        <table class="table table-striped">
-          <tr ng-repeat='todo in todos'>
-            <td><input type="checkbox" ng-true-value="1" ng-false-value="'0'" ng-model="todo.iscompleted" ng-change="updateTodo(todo)"></td>
-            <td>{{todo.name}}</td>
-            <td><button class="btn btn-danger btn-xs" ng-click="deleteTodo($index)">  <span class="glyphicon glyphicon-trash" ></span></button></td>
-          </tr>
-        </table>
-      </div>
-    </div>
-    {% endverbatim %}
-  </div>
   </body>
 </html>
