add documentation for the REST API using the lib rest_framework_swagger

--- a/superlistapi/templates/index.html
+++ b/superlistapi/templates/index.html
@@ -307,8 +307,9 @@ MAIN CONTENT
     <script type="text/javascript" src="{% static 'bower_components/angular-ui-router/release/angular-ui-router.js' %}"></script>
     <script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/jquery.dcjqaccordion.2.7.js' %}"></script>
-    <script type="text/javascript" src="{% static 'javascript/jquery.nicescroll.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/jquery.scrollTo.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'javascript/jquery.nicescroll.js' %}"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script type="text/javascript" src="{% static 'javascript/common-scripts.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/tasks.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/app.js' %}"></script>
